Trying to fix the problem of my resume thumbnail taking up too much space on my phone.

--- a/css/main.css
+++ b/css/main.css
@@ -131,6 +131,7 @@ Specifically in the media query section though */
 /* Center the resume thumbnail */
 .resume {
     text-align: center;
+    max-width: 100vw;
 }
 .resume-thumbnail {
      display: inline;
